--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,5 @@
 PORT = 3001
 DATABASE_URL=mongodb+srv://tuanbe:27031995@testing.tv2ny.mongodb.net/chat-app?retryWrites=true&w=majority
+JWT_SECRET=SECRET
+JWT_EXPIRES=7d
+TOKEN_AGE= 7
