--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.2.0",
