--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formidable": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
     "validator": "^13.7.0"
   },
