add get friends

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,7 @@ DATABASE_URL=mongodb+srv://tuanbe:27031995@testing.tv2ny.mongodb.net/chat-app?re
 JWT_SECRET=SECRET
 JWT_EXPIRES=7d
 TOKEN_AGE= 7
+#Cloudinary
+CLOUD_NAME=tuanbe
+API_KEY=934893116255464
+API_SECRET=xxzVam_yteMWAuZMD-47JxjaGkg
