--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "alert": "^5.0.10",
     "axios": "^0.27.2",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "node-sass": "^7.0.1",
