--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.16",
+    "socket.io": "^4.5.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
