--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,3 +7,4 @@ TOKEN_AGE= 7
 CLOUD_NAME=tuanbe
 API_KEY=934893116255464
 API_SECRET=xxzVam_yteMWAuZMD-47JxjaGkg
+CLOUND_UPLOAD_FILE=https://res.cloudinary.com/tuanbe/image/upload/
