--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
